<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackRate</string>
    <string name="icon_desc">Application icon</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_about">About</string>
    <string name="startTrack_btn">Start Tracking</string>
    <string name="saveTrack_btn">Save Track</string>
    <string name="showMyTracks_btn">Show My Tracks</string>
    <string name="login_btn">Sign In</string>
    <string name="stopTrack_btn">Stop Tracking</string>
    <string name="diaglog_GPSMessage">GPS not activated! You must activate GPS to use TrackRate</string>
    <string name="dialog_GPSSettings">GPS settings</string>
    <string name="cancelMsg">Cancel</string>
    <string name="dialog_CancelMsg">GPS not activated. Functionality of TrackRate limited</string>
    <string name="title_activity_save_track">SaveTrackActivity</string>
    <string name="title_activity_show_tracks">ShowTracksActivity</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="showAllTracks_btn">Show Highest Rated Tracks</string>
    <string name="UserNameTag">User Name:</string>
    <string name="startNewTrack_btn">Start A New Track</string>
    <string name="logOut_btn">Sign In</string>
    <string name="title_activity_track_details">TrackDetailsActivity</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="title_activity_show_comments">ShowCommentsActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>