<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_base"
    tools:context=".MainMenuActivity" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_desc"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvUserNameTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/UserNameTag"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/title_text" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/title_text" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/btnLogOut"
            style="@style/ButtonText"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="logOut"
            android:text="@string/logOut_btn" />

        <Button
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/btnStartNewTrack"
            style="@style/ButtonText"
            android:layout_above="@+id/btnLogOut"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="startTracking"
            android:text="@string/startNewTrack_btn" />

        <Button
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
            android:id="@+id/btnShowMyTracks"
            style="@style/ButtonText"
            android:layout_below="@+id/btnShowAllTracks"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:onClick="showMyTracks"
            android:text="@string/showMyTracks_btn" />

        <Button
            android:id="@+id/btnShowAllTracks"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:onClick="showAllTracks"
            android:text="@string/showAllTracks_btn" />

    </RelativeLayout>

</LinearLayout>