<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue_base"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_desc"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />

        <View style="@style/TitleBarSpring" />

        <ProgressBar
            android:id="@+id/title_refresh_progress"
            style="@style/TitleBarProgressIndicator"
            android:visibility="gone" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_separator_desc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/trackImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="4"
            android:src="@drawable/ic_launcher" />

        <TextView 
            android:textAppearance="@style/TextHeader"
            android:id="@+id/tvTrackName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:text="Track Name:" />

        <EditText
            android:id="@+id/etTrackName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="20" >

            <requestFocus />
        </EditText>

        <TextView
            android:textAppearance="@style/TextHeader"
            android:id="@+id/tvTrackDescr"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight=".5"
            android:text="Track Description:" />

        <EditText
            android:id="@+id/edTrackDescr"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2.5"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:orientation="horizontal" >

            <TextView
                android:textAppearance="@style/TextHeader"
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="Distance Travelled:" />

            <TextView
                android:id="@+id/etDisTravel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="Medium Text"
                android:textAppearance="@style/TextHeader" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveToCloud"
            style="@style/ButtonText"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:onClick="saveTrackToCloud"
            android:text="Save Track" />

    </LinearLayout>

</LinearLayout>