<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/blue_base"
    tools:context=".TrackDetailsActivity" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_desc"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMediumInverse" />

        <View style="@style/TitleBarSpring" />

        <ProgressBar
            android:id="@+id/title_refresh_progress"
            style="@style/TitleBarProgressIndicator"
            android:visibility="gone" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_separator_desc" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" >

        <TextView
            android:id="@+id/tvTrackDetailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="Track Name"
            android:textAppearance="@style/TextHeader" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivTrackDetailsImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="4"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvTrackDetailsUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:text="Medium Text"
            android:textAppearance="@style/TextHeader" />

        <RatingBar
            android:id="@+id/tvTrackDetailsRating"
            style="@android:style/Widget.Holo.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/tvTrackDetailsLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:text="Medium Text"
            android:textAppearance="@style/TextHeaderTwo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Track Description"
            android:textAppearance="@style/TextHeader" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTrackDetailsDescrib"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:text="Details"
        android:textAppearance="@style/TextBody" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnViewOnMap"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:onClick="showTrackOnMap"
            android:text="View Map" />

        <Button
            android:id="@+id/btnRateTrack"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:onClick="rateOrDeleteTrack"
            android:text="Rate Me!" />
        
        <Button
            android:id="@+id/btnShowComments"
            style="@style/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:onClick="showComments"
            android:text="Comments" />
    </LinearLayout>

</LinearLayout>